<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nt_bg_alba"
    tools:context=".FirstFragment">


    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck,UselessParent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/signin_dialog_title"
            app:srcCompat="@drawable/nt_logo_alba"
            tools:srcCompat="@drawable/nt_logo_alba" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/signin_dialog_title"
            android:textColor="#FFDA00"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/signin_dialog_subtitle"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/nt_alba_edit_text"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:ccpDialog_textColor="@color/nt_edit_text"
                app:ccp_arrowColor="@color/nt_edit_text"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_contentColor="@color/nt_edit_text"
                app:ccp_showNameCode="false" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/nt_alba_edit_text"
                android:ems="10"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/codeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:background="@drawable/nt_alba_edit_text"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/code2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:background="@drawable/nt_alba_edit_text"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/code3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:background="@drawable/nt_alba_edit_text"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/code4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/nt_alba_edit_text"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                tools:ignore="LabelFor" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/messageBarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/nt_alba_round_loading"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:indeterminateTint="@color/nt_icon_color" />

            <ImageView
                android:id="@+id/messageImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/nt_error_icon"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/messageBarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_dialog_error1"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/nt_alba_round_button"
            android:text="@string/signin_dialog_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/newCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/signin_dialog_button_code"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/timerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/timerIcon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/nt_timer"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="#D0D0D0"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/termsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="@string/signin_dialog_terms_prefix"
            android:layout_marginEnd="4dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/termsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_dialog_terms_link"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nt_border_top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@null"
            android:src="@drawable/nt_back_icon"
            tools:ignore="ContentDescription,VisualLintBounds" />

    </LinearLayout>


</RelativeLayout>